# src/api/organizations/_organizationCode@string/reports/_reportId@string/index.ts
@@ -1,6 +1,10 @@
 /* eslint-disable */
+import type * as Types from "../../../../@types";
+
 export type Methods = {
     get: {
         status: 200;
+        /** OK */
+        resBody: Types.ReportResponse;
     };
 };
